Fixed odd spacing with iframe on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -828,6 +828,10 @@ Mobile View Specific Changes
         margin-right: 7%;
     }
 
+    #resume-container{
+        width: 90vw;
+    }
+
     .footer{
         position: fixed; 
         bottom: 0;
